--- a/log_in.html
+++ b/log_in.html
@@ -16,8 +16,8 @@
                     <i class="fa fa-twitter fa-2x"></i><br>
                     <span>or use your account</span>
                     <form>
-                        <input type="email" name="Email" placeholder="Email"><br>
-                        <input type="password" name="Password" placeholder="Password"><br><br>
+                        <input type="email" name="Email" placeholder="Email" required><br>
+                        <input type="password" name="Password" placeholder="Password" required><br><br>
                         <span>Forgot your password?</span><br>
                         <button type="submit">LOG IN </button>
                     </form>
