--- a/log_in.html
+++ b/log_in.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="./style/style.css">
         <title>log in</title>
     </head>
@@ -16,8 +17,10 @@
                     <i class="fa fa-twitter fa-2x"></i><br>
                     <span>or use your account</span>
                     <form>
-                        <input type="email" name="Email" placeholder="Email" required><br>
-                        <input type="password" name="Password" placeholder="Password" required><br><br>
+                        <input type="email" name="Email" placeholder="Email"
+                            required><br>
+                        <input type="password" name="Password"
+                            placeholder="Password" required><br><br>
                         <span>Forgot your password?</span><br>
                         <button type="submit">LOG IN </button>
                     </form>
